# langtons_ant

./: .gitignore  CMakeLists.txt  README.md  langton.pro  langtonant.cpp  langtonant.h  langtonant_worker.cpp  langtonant_worker.h  langtonanthexa.cpp  langtonanthexa.h  main_analyse.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qpixmapdrawer.cpp  qpixmapdrawer.h
